--- a/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="V1O-nj-Uu5">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="PbB-8o-WSs">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -57,6 +58,50 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ATJ-Pp-pGz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="412" y="104.7976011994003"/>
+        </scene>
+        <!--Select City State-->
+        <scene sceneID="ICy-2t-ef5">
+            <objects>
+                <viewController id="PbB-8o-WSs" customClass="SelectCityState" customModule="WeatherApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OPD-IU-9oK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RvJ-Vd-m5K">
+                                <rect key="frame" x="0.0" y="191" width="375" height="162"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="PbB-8o-WSs" id="pje-dM-sNG"/>
+                                    <outlet property="delegate" destination="PbB-8o-WSs" id="oxO-T2-pme"/>
+                                </connections>
+                            </pickerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IWQ-7k-SeM">
+                                <rect key="frame" x="72" y="79" width="257" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="vds-mZ-vbV" firstAttribute="trailing" secondItem="IWQ-7k-SeM" secondAttribute="trailing" constant="46" id="2Uf-1B-0Ze"/>
+                            <constraint firstItem="IWQ-7k-SeM" firstAttribute="top" secondItem="vds-mZ-vbV" secondAttribute="top" constant="59" id="DfV-0d-jge"/>
+                            <constraint firstItem="RvJ-Vd-m5K" firstAttribute="top" secondItem="IWQ-7k-SeM" secondAttribute="bottom" constant="91" id="Nkf-1t-9nc"/>
+                            <constraint firstItem="vds-mZ-vbV" firstAttribute="bottom" secondItem="RvJ-Vd-m5K" secondAttribute="bottom" constant="314" id="Rdt-Qj-e6o"/>
+                            <constraint firstItem="IWQ-7k-SeM" firstAttribute="leading" secondItem="vds-mZ-vbV" secondAttribute="leading" constant="72" id="Rtq-BH-UcG"/>
+                            <constraint firstItem="RvJ-Vd-m5K" firstAttribute="trailing" secondItem="vds-mZ-vbV" secondAttribute="trailing" id="TOy-mh-yLz"/>
+                            <constraint firstItem="RvJ-Vd-m5K" firstAttribute="top" secondItem="vds-mZ-vbV" secondAttribute="top" constant="171" id="fkc-Z1-T1m"/>
+                            <constraint firstItem="RvJ-Vd-m5K" firstAttribute="leading" secondItem="vds-mZ-vbV" secondAttribute="leading" id="gui-ut-VOH"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="vds-mZ-vbV"/>
+                    </view>
+                    <connections>
+                        <outlet property="SelectedCity" destination="IWQ-7k-SeM" id="xwx-HJ-Uf8"/>
+                        <outlet property="citySelectPicker" destination="RvJ-Vd-m5K" id="4eM-DF-xgU"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="M4l-E2-Ohe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1151.2" y="104.7976011994003"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="DgV-sg-wrI">
