--- a/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Address-->
         <scene sceneID="6F5-eR-vl9">
             <objects>
-                <viewController id="eYl-f2-Ykx" customClass="ControllerView" customModule="WeatherApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="eYl-f2-Ykx" customClass="UIControllerView" customModule="WeatherApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3SU-bP-ZmM">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -77,7 +77,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="CnB-UE-nRm" id="bLE-yl-m05"/>
-                        <segue destination="ObV-f6-5iv" kind="showDetail" identifier="TempDetail" id="Zez-35-Iil"/>
+                        <segue destination="ObV-f6-5iv" kind="showDetail" identifier="TempDetail" id="yU0-h0-eUd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qwz-dj-v5q" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -123,11 +123,13 @@
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="T18-ht-9rl" id="ANI-cN-rW0"/>
-                            <outlet property="delegate" destination="T18-ht-9rl" id="1iv-ID-cbi"/>
+                            <outlet property="dataSource" destination="T18-ht-9rl" id="vcf-HC-oe8"/>
+                            <outlet property="delegate" destination="T18-ht-9rl" id="ZVh-qQ-1WC"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="WeatherDetails" id="9kS-oU-9a5"/>
+                    <navigationItem key="navigationItem" title="WeatherDetails" id="9kS-oU-9a5">
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="aeH-Qz-gcb"/>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5tD-yd-G1a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -142,7 +144,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="T18-ht-9rl" kind="relationship" relationship="rootViewController" id="loV-CQ-T3V"/>
+                        <segue destination="T18-ht-9rl" kind="relationship" relationship="rootViewController" id="AHq-bm-EUI"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cax-bN-c3x" userLabel="First Responder" sceneMemberID="firstResponder"/>
