--- a/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/Base.lproj/Main.storyboard
@@ -133,7 +133,81 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5tD-yd-G1a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2113" y="153"/>
+            <point key="canvasLocation" x="-1233" y="152"/>
+        </scene>
+        <!--Temperature Contrller-->
+        <scene sceneID="arc-e7-Xek">
+            <objects>
+                <viewController id="sd2-2f-lzy" customClass="TemperatureContrller" customModule="WeatherApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="SQx-iI-K0F">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="imagePlaceholder-2" translatesAutoresizingMaskIntoConstraints="NO" id="CtR-Mw-2EP">
+                                <rect key="frame" x="67" y="159" width="240" height="202"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="City Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f2M-gB-ms1">
+                                <rect key="frame" x="67" y="103" width="240" height="27.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="CurrentTemp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EAK-KD-uO0">
+                                <rect key="frame" x="67" y="435" width="240" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Main" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mdd-kb-Bpj">
+                                <rect key="frame" x="67" y="475" width="240" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Description" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VW2-ay-JOc">
+                                <rect key="frame" x="67" y="504" width="240" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="CurrentDate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ode-wS-tcM">
+                                <rect key="frame" x="67" y="406" width="240" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="g0t-d6-vhJ" firstAttribute="trailing" secondItem="f2M-gB-ms1" secondAttribute="trailing" constant="68" id="17s-HU-DS7"/>
+                            <constraint firstItem="CtR-Mw-2EP" firstAttribute="leading" secondItem="g0t-d6-vhJ" secondAttribute="leading" constant="67" id="7kJ-li-aB8"/>
+                            <constraint firstItem="g0t-d6-vhJ" firstAttribute="bottom" secondItem="CtR-Mw-2EP" secondAttribute="bottom" constant="306" id="HUw-EJ-FoC"/>
+                            <constraint firstItem="f2M-gB-ms1" firstAttribute="top" secondItem="g0t-d6-vhJ" secondAttribute="top" constant="39" id="eN1-Xc-ROP"/>
+                            <constraint firstItem="f2M-gB-ms1" firstAttribute="leading" secondItem="g0t-d6-vhJ" secondAttribute="leading" constant="67" id="jHc-dh-Dfk"/>
+                            <constraint firstItem="g0t-d6-vhJ" firstAttribute="trailing" secondItem="CtR-Mw-2EP" secondAttribute="trailing" constant="68" id="uGx-g8-hEJ"/>
+                            <constraint firstItem="CtR-Mw-2EP" firstAttribute="top" secondItem="f2M-gB-ms1" secondAttribute="bottom" constant="28.5" id="uah-Ne-zhV"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="g0t-d6-vhJ"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="9gZ-9C-fEL">
+                        <barButtonItem key="leftBarButtonItem" systemItem="done" id="Jgc-sk-P96"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="City" destination="f2M-gB-ms1" id="Y9J-ja-N6u"/>
+                        <outlet property="CurrentDate" destination="ode-wS-tcM" id="0Oh-Ym-KeQ"/>
+                        <outlet property="CurrentTemp" destination="EAK-KD-uO0" id="s2P-Yg-R3X"/>
+                        <outlet property="Description" destination="VW2-ay-JOc" id="CZU-0X-ju3"/>
+                        <outlet property="Main" destination="Mdd-kb-Bpj" id="tVu-3S-z0u"/>
+                        <outlet property="TemperatureImage" destination="CtR-Mw-2EP" id="sH9-yc-chL"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4Z8-B3-3OI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2074.4000000000001" y="152.47376311844079"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="tnD-N2-1KJ">
@@ -144,7 +218,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="T18-ht-9rl" kind="relationship" relationship="rootViewController" id="AHq-bm-EUI"/>
+                        <segue destination="sd2-2f-lzy" kind="relationship" relationship="rootViewController" id="Our-CJ-BkN"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cax-bN-c3x" userLabel="First Responder" sceneMemberID="firstResponder"/>
